# books

100-gcc-tips/: .gitignore  100-gcc-tips.txt  assemble.c  error.cc  hello.c  inline.c  macro.c  mem_bug_a.c  mem_bug_b.c  pack.c  thread.c  used.c
21st_century_c/ch08/check_func/: Makefile.am  build.sh  check_func.c  configure.ac
64bit_transition_guide/: .gitignore  Makefile  align.c  align_pack.c  aligned.txt  arch.c  guide.txt  intptr.c  lp64.c  mask.txt  pointer.txt  sign_ext1.c  sign_ext2.c
an_programer_prepares/: .gitignore  CustonSection.c  HeapSize.c  ImageSection.c  Lib.c  Lib.h  Makefile  ManualNameMangling.cpp  Program1.c  Program2.c  RunSo.c  RunSoSimple.c  SectionMapping.c  SimpleSection.c  SpecialSymbol.c  StackDump.c  TinyHelloWorld.c  TinyHelloWorld.lds  WeakReference.c  WeakSymbol.c  a.c  a1.c  a2.c  b.c  b1.c  b2.c  big_thing.c  big_thing_cxx.cpp  fastcall_a.c  fastcall_b.c  fork.c  lib_v0.ver  lib_v1.c  lib_v1.ver  longjmp.c  main.c  main_ver.c  pic.c  pthread.c  stack.c  (+2 more)
binary_hacks/: .gitignore
bpf/: .gitignore  32-bit-example.c  Makefile  tc-example.c  xdp-example.c
coroutine/: .gitignore  Makefile  print1.c  print2.c  print3.c  print4.c
debugging_with_gdb/: .gitignore  Makefile  bubble.c  bubble.fix  bubble_sort.c  hello.c  readme.txt
dpdk-trex/: 60-trex.network  bridge.sh  dpdk.txt  result.txt  router.sh  setup.sh  trex.build.txt  trex.txt  trex_astf.txt  trex_ndr.txt  trex_stf.txt
gentoo/: rebuild.sh
how_to_c/: .gitignore  Makefile  declaration_anywhere.c  how_to_c.txt  loop.c  pragma_once.c  pragma_once.h  return_type.c  (+3 more)
(+1750 files in other folders)
